# clockfy_time_control_cli_python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: continous_integration.yml
clockfyapi/: __init__.py  config.py  main.py
contrib/: secrets_sample.toml
src/: config.py  main.py  settings.toml
tests/: mock_data.py  test_domain.py
