[tool.poetry]
name = "clockify_api"
version = "0.1.0"
description = ""
authors = ["Jonatas Luiz de Oliveira <contact@jonatasoliveira.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.22.0"
dynaconf = "^3.1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-sugar = "^0.9.4"
isort = "^5.10.1"
blue = "^0.9.0"
prospector = "^1.7.7"
mypy = "^0.950"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
